--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "day65",
   "version": "0.1.0",
-  "private": false,
   "homepage": "https://calebnjw.github.io/ICE_create-react-app",
+  "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -13,6 +13,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
